fix-approve-cin

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -683,7 +683,13 @@
 "error.no_purchase": "لا يمكنك ترك تقييم بنجوم إلا إذا قمت بشراء من هذا البائع!",
 "error.already_rated": "لا يمكنك تعديل تقييمك!",
 "error.too_late": "لا يمكنك إعطاء تقييم بعد مرور أكثر من أسبوعين على الشراء!",
-"success.rating_saved": "تم حفظ تقييمك بنجاح!"
+"success.rating_saved": "تم حفظ تقييمك بنجاح!",
+"cin_notification_title": "تمت الموافقة على بطاقة تسجيلك!",
+"cin_notification_message": "نبلغك أنه تمت الموافقة على بطاقة تسجيلك من قبل المسؤولين.",
+"cin_required_warning": "يجب عليك تحميل صورة من بطاقة التسجيل الخاصة بك قبل نشر منشور!<br>يرجى الذهاب إلى <strong>حسابي</strong> → <strong>المعلومات البنكية</strong> لإضافتها",
+"cin_pending_warning": "بطاقة التسجيل الخاصة بك قيد التحقق. ستتلقى إشعارًا بمجرد الموافقة عليها"
+
+
 
 
 
