--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -682,7 +682,15 @@
 "error.no_purchase": "You can only leave a star rating if you have made a purchase from this seller!",
 "error.already_rated": "You cannot modify your rating!",
 "error.too_late": "You cannot give a rating more than 2 weeks after your purchase!",
-"success.rating_saved": "Your rating has been saved!"
+"success.rating_saved": "Your rating has been saved!",
+"cin_approved_success": "CIN approved successfully.",
+"cin_notification_title": "Your registration card has been approved!",
+"cin_notification_message": "We inform you that your registration card has been approved by the administrators.",
+"cin_required_warning": "You must upload an image of your registration card before publishing a post!<br>Please go to <strong>My Account</strong> → <strong>Bank details</strong> to add it.",
+"cin_pending_warning": "Your registration card is being verified. You will receive a notification once it is approved."
+
+
+
 
 
 
