fix-trans-photos

--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -393,7 +393,7 @@
 "download_image": "Télécharger l'image",
 "save": "Sauvegarder",
 "update": "Modifier",
-"choose_images": "Veuillez choisir les images de votre article",
+"choose_images": "Veuillez choisir les images de votre article (minimum 3 photos)",
 "add_more_details": "Renseigner plus de détails sur votre article",
 "post_title": "Titre de la publication",
 "price1": "Prix de votre article",
