--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -148,7 +148,7 @@
 "product_title": "المنتج: :title",
 "rating": "التقييم: :stars / 5",
 "leave_review_info": "يمكنك ترك مراجعة على شكل نجوم فقط إذا قمت بالشراء من هذا البائع!",
-"no_more_review": "لا يمكنك ترك مراجعة لأنك قد قمت بذلك بالفعل!",
+"no_more_review": "لا يمكنك ترك مراجعة لأنك قد قمت بذلك سابقًا!",
 "attention": "تحذير!",
 "rate_button": "قيم :star",
 "contact": "الإتصال",
