--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -687,7 +687,9 @@
 "cin_notification_title": "تمت الموافقة على بطاقة تسجيلك!",
 "cin_notification_message": "نبلغك أنه تمت الموافقة على بطاقة تسجيلك من قبل المسؤولين.",
 "cin_required_warning": "يجب عليك تحميل صورة من بطاقة التسجيل الخاصة بك قبل نشر منشور!<br>يرجى الذهاب إلى <strong>حسابي</strong> → <strong>المعلومات البنكية</strong> لإضافتها",
-"cin_pending_warning": "بطاقة التسجيل الخاصة بك قيد التحقق. ستتلقى إشعارًا بمجرد الموافقة عليها"
+"cin_pending_warning": "بطاقة التسجيل الخاصة بك قيد التحقق. ستتلقى إشعارًا بمجرد الموافقة عليها",
+"Catégories des articles vendus!": "فئات المنتجات المباعة!",
+"Par ": "بواسطة "
 
 
 
