--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -687,7 +687,9 @@
 "cin_notification_title": "Your registration card has been approved!",
 "cin_notification_message": "We inform you that your registration card has been approved by the administrators.",
 "cin_required_warning": "You must upload an image of your registration card before publishing a post!<br>Please go to <strong>My Account</strong> → <strong>Bank details</strong> to add it.",
-"cin_pending_warning": "Your registration card is being verified. You will receive a notification once it is approved."
+"cin_pending_warning": "Your registration card is being verified. You will receive a notification once it is approved.",
+"Catégories des articles vendus!": "Categories of sold items!",
+"Par ": "By "
 
 
 
