--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -689,7 +689,9 @@
 "cin_notification_title": "Votre carte d’immatriculation a été validée !",
 "cin_notification_message": "Nous vous informons que votre carte d’immatriculation a été validée par les administrateurs.",
 "cin_required_warning": "Vous devez ajouter une image de votre carte d’immatriculation avant de publier un post !<br>Veuillez aller dans <strong>Mon compte</strong> → <strong>Coordonnées bancaires</strong> pour l'ajouter.",
-"cin_pending_warning": "Votre carte d’immatriculation est en cours de validation. Vous recevrez une notification une fois qu'elle aura été approuvée."
+"cin_pending_warning": "Votre carte d’immatriculation est en cours de validation. Vous recevrez une notification une fois qu'elle aura été approuvée.",
+"Catégories des articles vendus!": "Catégories des articles vendus!",
+"Par ": "Par "
 
 
 
