--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -106,7 +106,7 @@
 "Retire2": "ازالة من السلة",
 "Réduire le prix": "خفض السعر",
 "Ajouter aux favoris": "أضف إلى المفضلة",
-"Retirer des favoris": "إزالة من المفضلة",
+"Retirer des favoris": "إزالة من المفضلة لدي",
 "Signaler cette annonce": "الإبلاغ عن هذا الإعلان",
 "Vous avez déjà signalé cette annonce !": "لقد أبلغت عن هذا الإعلان من قبل!",
 "Détails": "تفاصيل",
