--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -101,6 +101,7 @@
 "Frais de Livraison": "Shipping Fee",
 "Ajouter": "Add to cart",
 "Retire": "Removed from cart",
+"Retire2": "Remove from cart",
 "Réduire le prix": "Reduce price",
 "Ajouter aux favoris": "Add to favorites",
 "Retirer des favoris": "Remove from favorites",
