fix-ar-trans-fav

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -307,8 +307,8 @@
 "article_status": "حالة المنتج",
 "added_on": "تمت الإضافة في",
 "no_favorites": "ليس لديك أي مفضلات بعد",
-"favorite_removed": "تمت إزالة المنتج من المفضل",
-"favorite_added": "تمت إضافة المنتج إلى المفضلة",
+"favorite_removed": "تمت إزالة المنتج من المفضل لدي",
+"favorite_added": "تمت إضافة المنتج إلى المفضل لدي",
 "remove_all": "حذف الكل",
 "notifications.new_order_title": "طلب جديد!",
 "notifications.new_order_message": ":salutation :seller، تم طلب منتجك <a href=':post_url' class='underlined-link'>:post_title</a> من قبل :buyer. يرجى تحضير المنتج للشحن. سيتواصل معك أحد مندوبي الشحن التابعين لنا قريبًا لاستلام المنتج.<br>يرجى <a href=':bank_info_url' class='underlined-link'>النقر هنا</a> لتأكيد أو تحديث معلوماتك البنكية (RIB)، حتى نتمكن من تحويل الأموال لك عند اكتمال عملية البيع.",
