--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -105,7 +105,7 @@
 "Réduire le prix": "Reduce price",
 "Ajouter aux favoris": "Add to favorites",
 "Retirer des favoris": "Remove from favorites",
-"Signaler cette annonce": "Report this listing",
+"Signaler cette annonce": "Report this ad",
 "Vous avez déjà signalé cette annonce !": "You have already reported this listing!",
 "Détails": "Details",
 "Condition": "Condition",
