--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -61,11 +61,11 @@
 "luxury_only": "فقط الفاخرة",
 "searching_ads": "البحث عن الإعلانات...",
 "filter_by_condition": "فلتر حسب الحالة",
-"new_with_tags": "جديد مع العلامات",
-"new_without_tags": "جديد بدون العلامات",
-"very_good_condition": "حالة جيدة جداً",
-"good_condition": "حالة جيدة",
-"used": "مستعمل",
+"Neuf avec étiquettes": "جديد مع العلامات",
+"Neuf sans étiquettes": "جديد بدون العلامات",
+"Très bon état": "حالة جيدة جداً",
+"Bon état": "حالة جيدة",
+"Usé": "مستعمل",
 "all_items_in_category": "جميع العناصر في هذه الفئة",
 "back_to_subcategories": "العودة إلى قائمة الفئات الفرعية",
 "login_to_sell_and_buy": "تسجيل الدخول للبيع والشراء على شوب<span class=\"color\">ين</span>",
