--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -60,11 +60,11 @@
 "luxury_only": "Luxury Only",
 "searching_ads": "Searching ads...",
 "filter_by_condition": "Filter by",
-"new_with_tags": "New with tags",
-"new_without_tags": "New without tags",
-"very_good_condition": "Very good condition",
-"good_condition": "Good condition",
-"used": "Used",
+"Neuf avec étiquettes": "New with tags",
+"Neuf sans étiquettes": "New without tags",
+"Très bon état": "Very good condition",
+"Bon état": "Good condition",
+"Usé": "Used",
 "all_items_in_category": "All items in this category",
 "back_to_subcategories": "Back to the subcategories list",
 "login_to_sell_and_buy": "Log in to sell and buy on SHOP<span class=\"color\">IN</span>",
