--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -61,11 +61,11 @@
 "luxury_only": "Luxury uniquement",
 "searching_ads": "Recherche d'annonces...",
 "filter_by_condition": "Filtrer par état",
-"new_with_tags": "Neuf avec étiquettes",
-"new_without_tags": "Neuf sans étiquettes",
-"very_good_condition": "Très bon état",
-"good_condition": "Bon état",
-"used": "Usé",
+"Neuf avec étiquettes": "Neuf avec étiquettes",
+"Neuf sans étiquettes": "Neuf sans étiquettes",
+"Très bon état": "Très bon état",
+"Bon état": "Bon état",
+"Usé": "Usé",
 "all_items_in_category": "Tout les articles de cette catégorie",
 "back_to_subcategories": "Retour à la liste des sous-catégories",
 "login_to_sell_and_buy": "Connectez-vous pour vendre et acheter sur SHOP<span class=\"color\">IN</span>",
