--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -373,7 +373,7 @@
 "create_first_post": "Create Your First Post",
 "create_post": "Create a Post",
 "now": "Now",
-"Attention!": "Attention!",
+"Attention!": "Warning!",
 "Veuillez ajouter une image de votre carte d'identité avant de publier.": "Please upload your registration card image before publishing.",
 "Ajouter maintenant": "Add now",
 "Close": "Close",
@@ -696,7 +696,9 @@
 "invalid_status_to_rate": "You can only rate a post after it has been delivered.",
 "title_thanks": "Thank you!",
 "message_updated": "Your registration card has been updated and is awaiting validation.",
-"message_notification": "We will send you a notification once validated."
+"message_notification": "We will send you a notification once validated.",
+"attente_validation" : "Your registration card is pending validation."
+
 
 
 
