--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -65,7 +65,7 @@
 "Neuf sans étiquettes": "جديد بدون العلامات",
 "Très bon état": "حالة جيدة جداً",
 "Bon état": "حالة جيدة",
-"Usé": "مستعمل",
+"Usé": "مستعمل بوضوح",
 "all_items_in_category": "جميع العناصر في هذه الفئة",
 "back_to_subcategories": "العودة إلى قائمة الفئات الفرعية",
 "login_to_sell_and_buy": "تسجيل الدخول للبيع والشراء على شوب<span class=\"color\">ين</span>",
