fix-region-name

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -696,7 +696,19 @@
 "title_thanks": "شكراً لك!",
 "message_updated": "تم تحديث بطاقة التسجيل الخاصة بك وهي في انتظار التحقق.",
 "message_notification": "سنرسل لك إشعارًا بمجرد التحقق منها.",
-"attente_validation" : "بطاقة التسجيل الخاصة بك  قيد المراجعة"
+"attente_validation" : "بطاقة التسجيل الخاصة بك  قيد المراجعة",
+"Tanger-Tétouan-Al Hoceïma" : "طنجة-تطوان-الحسيمة",
+"L'Oriental" : "الشرق",
+"Fès-Meknès" : "فاس-مكناس",
+"Rabat-Salé-Kénitra" : "الرباط-سلا-القنيطرة",
+"Béni Mellal-Khénifra" : "بني ملال-خنيفرة",
+"Casablanca-Settat" : "الدار البيضاء-سطات",
+"Marrakech-Safi" : "مراكش-آسفي",
+"Drâa-Tafilalet" : "درعة-تافيلالت",
+"Souss-Massa" : "سوس-ماسة",
+"Guelmim-Oued Noun" : "كلميم-واد نون",
+"Laâyoune-Sakia El Hamra" : "العيون-السمارة",
+"Dakhla-Oued Ed-Dahab" : "الداخلة-واد الذهب"
 
 
 
