--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -697,7 +697,19 @@
 "title_thanks": "Thank you!",
 "message_updated": "Your registration card has been updated and is awaiting validation.",
 "message_notification": "We will send you a notification once validated.",
-"attente_validation" : "Your registration card is pending validation."
+"attente_validation" : "Your registration card is pending validation.",
+"Tanger-Tétouan-Al Hoceïma" : "Tanger-Tétouan-Al Hoceïma",
+"L'Oriental" : "L'Oriental",
+"Fès-Meknès" : "Fès-Meknès",
+"Rabat-Salé-Kénitra" : "Rabat-Salé-Kénitra",
+"Béni Mellal-Khénifra" : "Béni Mellal-Khénifra",
+"Casablanca-Settat" : "Casablanca-Settat",
+"Marrakech-Safi" : "Marrakech-Safi",
+"Drâa-Tafilalet" : "Drâa-Tafilalet",
+"Souss-Massa" : "Souss-Massa",
+"Guelmim-Oued Noun" : "Guelmim-Oued Noun",
+"Laâyoune-Sakia El Hamra" : "Laâyoune-Sakia El Hamra",
+"Dakhla-Oued Ed-Dahab" : "Dakhla-Oued Ed-Dahab"
 
 
 
