--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -698,7 +698,19 @@
 "title_thanks": "Merci !",
 "message_updated": "Votre carte d’immatriculation a été mise à jour et est en attente de validation.",
 "message_notification": "Nous vous enverrons une notification une fois validée.",
-"attente_validation" : "Votre carte d’immatriculation est en attente de validation"
+"attente_validation" : "Votre carte d’immatriculation est en attente de validation",
+"Tanger-Tétouan-Al Hoceïma" : "Tanger-Tétouan-Al Hoceïma",
+"L'Oriental" : "L'Oriental",
+"Fès-Meknès" : "Fès-Meknès",
+"Rabat-Salé-Kénitra" : "Rabat-Salé-Kénitra",
+"Béni Mellal-Khénifra" : "Béni Mellal-Khénifra",
+"Casablanca-Settat" : "Casablanca-Settat",
+"Marrakech-Safi" : "Marrakech-Safi",
+"Drâa-Tafilalet" : "Drâa-Tafilalet",
+"Souss-Massa" : "Souss-Massa",
+"Guelmim-Oued Noun" : "Guelmim-Oued Noun",
+"Laâyoune-Sakia El Hamra" : "Laâyoune-Sakia El Hamra",
+"Dakhla-Oued Ed-Dahab" : "Dakhla-Oued Ed-Dahab"
 
 
 
