fix-create-post

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -10,7 +10,7 @@
 "login": "تسجيل الدخول",
 "search_article": "البحث عن منتج",
 "publish_article": "نشر منتج",
-"publish_article1": "هل تريد القيام ببيع منتج",
+"publish_article1": "هل تريد القيام ببيع منتج ؟",
 "my_ads": "إعلاناتي",
 "my_sales": "مبيعاتي",
 "my_purchases": "مشترياتي",
