--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -10,7 +10,7 @@
 "login": "Se connecter",
 "search_article": "Rechercher un article",
 "publish_article": "Publier un article",
-"publish_article1": "Publier un article",
+"publish_article1": "Publier un article ?",
 "my_ads": "Mes annonces",
 "my_sales": "Mes ventes",
 "my_purchases": "Mes achats",
