--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -9,7 +9,7 @@
 "login": "Log in",
 "search_article": "Search for an item",
 "publish_article": "Add an item",
-"publish_article1": "Add an item",
+"publish_article1": "Add an item ?",
 "my_ads": "My ads",
 "my_sales": "My sales",
 "my_purchases": "My purchases",
