--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -337,13 +337,13 @@
 "incomplete_address": "عنوان غير مكتمل",
 "other_addresses": "عناوين توصيل أخرى",
 "default_address": "العنوان الافتراضي",
-"set_as_default": "تعيين كافتراضي",
+"set_as_default": "تعيين كعنوان حالي",
 "edit_address": "تعديل العنوان",
 "add_new_address": "إضافة عنوان جديد",
 "add": "إضافة",
 "continue": "استمر",
-"complete_address_info": "يرجى إكمال جميع معلومات العنوان الافتراضي لمتابعة الطلب.",
-"complete_main_address_info": "يرجى إكمال جميع معلومات عنوانك الرئيسي لمتابعة الطلب.",
+"complete_address_info": "يرجى إكمال جميع معلومات العنوان الحالي لمتابعة الطلب.",
+"complete_main_address_info": "يرجى إكمال جميع معلومات عنوانك الحالي لمتابعة الطلب.",
 "payment_shipping": "طريقة الدفع والتوصيل",
 "cash_on_delivery": "الدفع عند الاستلام",
 "cash_on_delivery_info": "تدفع عند الاستلام (في العنوان الذي تختاره) وتتلقى طلبك بأمان.",
