--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -291,7 +291,7 @@
 "subtotal": "المجموع الفرعي",
 "total_fees": "إجمالي الرسوم",
 "total": "الإجمالي",
-"validate_cart": "تحقق من سلة التسوق",
+"validate_cart": "تأكيد طلبك",
 "validating": "جاري التحقق....",
 "enter_region": "يرجى إدخال منطقتك <a href='/informations'>هنا</a> لمتابعة طلبك.",
 "categories": "الفئات",
