--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -106,7 +106,7 @@
 "Ajouter aux favoris": "Add to favorites",
 "Retirer des favoris": "Remove from favorites",
 "Signaler cette annonce": "Report this ad",
-"Vous avez déjà signalé cette annonce !": "You have already reported this listing!",
+"Vous avez déjà signalé cette annonce !": "You have already reported this item!",
 "Détails": "Details",
 "Condition": "Condition",
 "Catégorie": "Category",
