--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -708,7 +708,9 @@
 "Souss-Massa" : "سوس-ماسة",
 "Guelmim-Oued Noun" : "كلميم-واد نون",
 "Laâyoune-Sakia El Hamra" : "العيون-السمارة",
-"Dakhla-Oued Ed-Dahab" : "الداخلة-واد الذهب"
+"Dakhla-Oued Ed-Dahab" : "الداخلة-واد الذهب",
+"prix" : "السعر",
+"état" : "الحالة"
 
 
 
