--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -710,7 +710,9 @@
 "Souss-Massa" : "Souss-Massa",
 "Guelmim-Oued Noun" : "Guelmim-Oued Noun",
 "Laâyoune-Sakia El Hamra" : "Laâyoune-Sakia El Hamra",
-"Dakhla-Oued Ed-Dahab" : "Dakhla-Oued Ed-Dahab"
+"Dakhla-Oued Ed-Dahab" : "Dakhla-Oued Ed-Dahab",
+"prix" : "Prix",
+"état" : "État"
 
 
 
