--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -709,7 +709,9 @@
 "Souss-Massa" : "Souss-Massa",
 "Guelmim-Oued Noun" : "Guelmim-Oued Noun",
 "Laâyoune-Sakia El Hamra" : "Laâyoune-Sakia El Hamra",
-"Dakhla-Oued Ed-Dahab" : "Dakhla-Oued Ed-Dahab"
+"Dakhla-Oued Ed-Dahab" : "Dakhla-Oued Ed-Dahab",
+"prix" : "Price",
+"état" : "Status"
 
 
 
