fix-trans-region

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -707,7 +707,7 @@
 "Drâa-Tafilalet" : "درعة-تافيلالت",
 "Souss-Massa" : "سوس-ماسة",
 "Guelmim-Oued Noun" : "كلميم-واد نون",
-"Laâyoune-Sakia El Hamra" : "العيون-السمارة",
+"Laâyoune-Sakia El Hamra" : "العيون - الساقية الحمراء",
 "Dakhla-Oued Ed-Dahab" : "الداخلة-واد الذهب",
 "prix" : "السعر",
 "état" : "الحالة"
