--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -214,6 +214,7 @@
     "validation": "قيد التحقق",
     "vente": "قيد البيع",
     "vendu": "تم البيع",
+    "vendu1": "مباع",
     "livraison": "قيد التوصيل",
     "livré": "تم التوصيل",
     "refusé": "مرفوض",
