--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -212,6 +212,7 @@
 "validation": "Pending validation",
 "vente": "On sale",
 "vendu": "Sold",
+"vendu1": "Sold",
 "livraison": "Being delivered",
 "livré": "Delivered",
 "refusé": "Refused",
