--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -213,6 +213,7 @@
 "validation": "En validation",
 "vente": "En cours de vente",
 "vendu": "Vendu",
+"vendu1": "Vendu",
 "livraison": "En cours de livraison",
 "livré": "Déjà livré",
 "refusé": "Refusé",
