--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -105,7 +105,7 @@
 "Retire": "تمت الإزالة من السلة",
 "Retire2": "ازالة من السلة",
 "Réduire le prix": "خفض السعر",
-"Ajouter aux favoris": "أضف إلى المفضلة",
+"Ajouter aux favoris": "أضف إلى المفضل لدي",
 "Retirer des favoris": "إزالة من المفضل لدي",
 "Signaler cette annonce": "الإبلاغ عن هذا الإعلان",
 "Vous avez déjà signalé cette annonce !": "لقد أبلغت عن هذا الإعلان من قبل!",
