--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -36,9 +36,9 @@
 "protection_et_securite": "Protection and Security",
 "protection_description": "SHOP<span class=\"color\">IN</span> offers you practical tools, such as private messaging and a reporting system, to ensure a secure environment and trustworthy transactions.",
 "experience_agreable": "Pleasant Experience!",
-"experience_description": "Whether buying or selling, your experience on SHOPIN will always be marked by exceptional service, unmatched simplicity, and guaranteed satisfaction.",
+"experience_description": "Whether you're buying or selling, your experience on SHOPIN will always be marked by exceptional service, unmatched simplicity, and guaranteed satisfaction.",
 "livraison_porte_a_porte": "Door-to-Door Delivery",
-"livraison_description": "A delivery person will come directly to your door to pick up or deliver your items. No more hassle with long-distance selling!",
+"livraison_description": "A delivery person will come directly to your door to pick up or deliver your items. No more hassle with remote sales!",
 "generales": "General",
 "contactez_nous": "Contact Us",
 "page_faqs": "FAQs Page",
