--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -711,7 +711,9 @@
 "Laâyoune-Sakia El Hamra" : "العيون - الساقية الحمراء",
 "Dakhla-Oued Ed-Dahab" : "الداخلة-واد الذهب",
 "prix" : "السعر",
-"état" : "الحالة"
+"état" : "الحالة",
+"shopiner supprimé": "تم حذف الشوبينر",
+"commande annulée": "تم إلغاء الطلب"
 
 
 
