--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -712,7 +712,9 @@
 "Laâyoune-Sakia El Hamra" : "Laâyoune-Sakia El Hamra",
 "Dakhla-Oued Ed-Dahab" : "Dakhla-Oued Ed-Dahab",
 "prix" : "Price",
-"état" : "Status"
+"état" : "Status",
+"shopiner supprimé": "shopiner deleted",
+"commande annulée": "order cancelled"
 
 
 
