--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -713,7 +713,9 @@
 "Laâyoune-Sakia El Hamra" : "Laâyoune-Sakia El Hamra",
 "Dakhla-Oued Ed-Dahab" : "Dakhla-Oued Ed-Dahab",
 "prix" : "Prix",
-"état" : "État"
+"état" : "État",
+"shopiner supprimé": "shopiner supprimé",
+"commande annulée": "commande annulée"
 
 
 
