--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -718,10 +718,8 @@
 "Ordre décroissant":"ترتيب تنازلي",
 "Articles soldés":"المنتجات المخفضة",
 "only": "فقط",
-"no_results": "لا توجد نتائج لمعايير البحث الخاصة بك."
-
-
-
-
+"no_results": "لا توجد نتائج لمعايير البحث الخاصة بك.",
+"Your message has been sent successfully!": "تم إرسال رسالتك بنجاح!",
+"Sending...": "جاري الإرسال..."
 
 }
