--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -719,7 +719,10 @@
 "Ordre décroissant":"Descending order",
 "Articles soldés":"On sale items",
 "only": "Only",
-"no_results": "No results for your search criteria."
+"no_results": "No results for your search criteria.",
+"Your message has been sent successfully!": "Your message has been sent successfully!",
+"Sending...": "Sending..."
+
 
 
 
