--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -720,7 +720,10 @@
 "Ordre décroissant":"Ordre décroissant",
 "Articles soldés":"Articles soldés",
 "only": "Uniquement",
-"no_results": "Aucun résultat pour vos critères de recherche."
+"no_results": "Aucun résultat pour vos critères de recherche.",
+"Your message has been sent successfully!": "Votre message a été envoyé avec succès!",
+"Sending...": "Envoi en cours..."
+
 
 
 
