--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -720,6 +720,8 @@
 "only": "فقط",
 "no_results": "لا توجد نتائج لمعايير البحث الخاصة بك.",
 "Your message has been sent successfully!": "تم إرسال رسالتك بنجاح!",
-"Sending...": "جاري الإرسال..."
+"Sending...": "جاري الإرسال...",
+"We have received your message": "لقد استلمنا رسالتك"
+
 
 }
