--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -721,7 +721,9 @@
 "only": "Only",
 "no_results": "No results for your search criteria.",
 "Your message has been sent successfully!": "Your message has been sent successfully!",
-"Sending...": "Sending..."
+"Sending...": "Sending...",
+"We have received your message": "We have received your message"
+
 
 
 
