--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -722,7 +722,8 @@
 "only": "Uniquement",
 "no_results": "Aucun résultat pour vos critères de recherche.",
 "Your message has been sent successfully!": "Votre message a été envoyé avec succès!",
-"Sending...": "Envoi en cours..."
+"Sending...": "Envoi en cours...",
+"We have received your message": "Nous avons bien reçu votre message"
 
 
 
